--- a/pages/page11.html
+++ b/pages/page11.html
@@ -1,22 +1,20 @@
-<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6;background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
-    <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">الحفاظ على الموارد المائية في المملكة العربية السعودية</h2>
+<div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: right; padding: 20px; position: relative;  background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
+    <!-- صورة لهذه الصفحة فقط -->
+    <img src="pics/1881121.jpg"
+         style="float: left; margin: 15px; width: 150px; height: 150px; object-fit: cover; border-radius: 10px;">
 
-    <p style="font-size: 18px; color: #34495e;text-align: right">
-        تهتم المملكة العربية السعودية بشكل خاص بالمحافظة على مواردها المائية في ظل الظروف البيئية القاسية
-        نظرًا لموقعها الجغرافي الصحراوي، فإن المياه تعتبر من أهم الموارد التي يجب الحفاظ عليه
-        ومن بين الحلول التي تم تبنيها في المملكة: <strong>تحلية المياه</strong> و <strong>إعادة تدوير المياه</strong>
+    <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">تأثير رؤية السعودية الخضراء على المجتمع</h2>
+    
+    <p style="font-size: 16px; color: #34495e; text-align: right;">
+        رؤية <strong>السعودية الخضراء</strong> أحدثت تحولًا عميقًا في المجتمع السعودي، حيث أسهمت بشكل ملحوظ في تغيير مفاهيم الحياة اليومية تجاه البيئة. من خلال التركيز على مشاريع التشجير، حماية البيئة، والطاقة المتجددة، أصبحت المملكة أكثر توافقًا مع احتياجات المواطنين البيئية، وأدى ذلك إلى تعزيز الشعور بالمسؤولية الاجتماعية تجاه البيئة.
     </p>
 
-    <p style="font-size: 18px; color: #34495e;">
-        المملكة تركز على عدة إجراءات لضمان استدامة المياه والحفاظ على هذا المورد الحيوي. ومن أهم هذه الإجراءات
-    </p>
-
-    <ul style="text-align: right; font-size: 18px; color: #34495e;">
-        <li><strong>استخدام تقنيات تحلية المياه</strong>: تعتبر من أبرز الحلول التي تطبقها المملكة لتحويل مياه البحر المالحة إلى مياه صالحة للشرب</li>
-        <li><strong>إعادة تدوير المياه</strong>: يتم تنفيذ مشاريع لإعادة استخدام المياه المعالجة في الزراعة والصناعات المختلفة</li>
+    <ul style="text-align: right; margin: 20px auto; padding: 0; display: inline-block; font-size: 16px; color: #34495e;">
+        <li style="margin-bottom: 8px; color: #34495e;">تشجيع المجتمع على المشاركة في المبادرات البيئية أسهم في تعزيز الوعي البيئي بين الأفراد.</li>
+        <li style="margin-bottom: 8px; color: #34495e;">تحسين جودة الهواء والمسطحات الخضراء أسهم في تعزيز صحة المواطنين ورفاهيتهم.</li>
     </ul>
-
 </div>
+
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
