--- a/pages/page13.html
+++ b/pages/page13.html
@@ -6,7 +6,7 @@
     </p>
 
     <p style="font-size: 18px; color: #34495e; text-align: right;">
-        تلعب الرياضة دورًا هامًا في تعزيز مفاهيم الاستدامة والمساهمة في تحقيق أهداف مبادرة السعودية الخضراء، حيث تسعى المملكة إلى دمج الرياضة في الأنشطة التي تعزز الوعي البيئي
+        تلعب الرياضة دورًا هامًا في تعزيز مفاهيم الاستدامة والمساهمة في تحقيق أهداف مبادرة السعودية الخضراء
     </p>
 
     <p style="font-size: 18px; color: #34495e; text-align: right;">
