--- a/pages/page14.html
+++ b/pages/page14.html
@@ -1,20 +1,22 @@
-<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6; background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
-    <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">شركاء مبادرة السعودية الخضراء</h2>
+<div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: right; padding: 20px; position: relative; background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center; display: flex; flex-direction: column; align-items: flex-start;">
+    
+    <!-- البانر الصغير عن الصحة -->
+    <div style="width: 100%; margin-bottom: 15px;">
+        <img src="pics/helth.avif" 
+             style="width: 100%; max-width: 400px; height: auto; object-fit: cover; border-radius: 10px;">
+    </div>
 
-    <p style="font-size: 18px; color: #34495e;text-align: right">
-        إن مبادرة "السعودية الخضراء" تعتبر مشروعًا متكاملًا يتطلب تضافر جهود العديد من الشركاء من مختلف القطاعات في المملكة
-        وتأتي هذه الشراكات لتسهم في تحقيق الأهداف البيئية والاقتصادية والاجتماعية للمبادرة
-        مما يعزز من دور المملكة في مجال الاستدامة والحفاظ على البيئة.
-    </p>
-
-    <p style="font-size: 18px; color: #34495e;text-align: center">
-        من أبرز الشركاء في هذه المبادرة
-    </p>
-
-    <ul style="text-align: right; font-size: 18px; color: #34495e;text-align: right">
-        <li><strong>القطاع الحكومي</strong>: يشمل الجهات الحكومية مثل وزارة البيئة والمياه والزراعة، ووزارة الطاقة، وهيئة تطوير المناطق وغيرها من المؤسسات الحكومية التي تدير وتراقب تنفيذ المبادرة</li>
-        <li><strong>القطاع الخاص</strong>: الشركات والمستثمرين الذين يساهمون في تطوير المشاريع البيئية، من خلال الابتكار في التقنيات الخضراء وخلق فرص استثمارية في مجال الطاقة المتجددة والزراعة المستدامة</li>
-    </ul>
+    <!-- النص في الأسفل -->
+    <div style="width: 100%;">
+        <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">التأثير الإيجابي لرؤية السعودية الخضراء على الصحة</h2>
+        <p style="font-size: 16px; color: #34495e; text-align: right;">
+            بشكل كبير في تعزيز الصحة العامة في المملكة، حيث ركزت على تحسين البيئة وتقليل التلوث، مما أسهم في تحسين. 
+        </p>
+        <ul style="text-align: right; margin: 20px auto; padding: 0; font-size: 16px; color: #34495e;">
+            <li style="margin-bottom: 8px; color: #34495e;">نوعية الهواء من خلال زراعة الأشجار والمشاريع البيئية أسهم في الحد من الأمراض التنفسية</li>
+            <li style="margin-bottom: 8px; color: #34495e;">الحد من التلوث البيئي ساعد في تقليل نسب الأمراض المرتبطة بتلوث المياه والهواء.</li>
+        </ul>
+    </div>
 
 </div>
 
