--- a/pages/page15.html
+++ b/pages/page15.html
@@ -14,7 +14,7 @@
     </p>
 
     <ul style="text-align: right; font-size: 18px; color: #34495e;">
-        <li><strong>الطاقة المتجددة</strong> تستخدم المملكة تقنيات الطاقة الشمسية وطاقة الرياح لتوليد الكهرباء، وتعتبر هذه التقنيات من الحلول الأساسية</li>
+تستخدم المملكة تقنيات الطاقة الشمسية وطاقة الرياح لتوليد الكهرباء</li>
     </ul>
   </div>
 </div>
