--- a/pages/page5.html
+++ b/pages/page5.html
@@ -2,7 +2,7 @@
     <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">تاريخ شبه الجزيرة العربية</h2>
 
     <p class="center-pic" style="position: relative; z-index: 2;">
-        <img src="pics/desert.jpg" alt="تاريخ شبه الجزيرة العربية" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
+        <img src="pics/ArabianPeninsula.jpeg" alt="تاريخ شبه الجزيرة العربية" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
     </p>
 
     <p style="font-size: 16px; color: #34495e; position: relative; z-index: 2; text-align: right;">
