--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,7 +1,7 @@
 <div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: center; padding: 20px;">
 
     <p class="center-pic">
-        <img src="pics/ArabianPeninsula.jpeg" alt="تاريخ شبه الجزيرة العربية" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
+        <img src="pics/desert.jpg" alt="تاريخ شبه الجزيرة العربية" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
     </p>
 
     <p style="font-size: 16px; color: #34495e; text-align: right;">
